# opsynth

./: Cargo.toml  README.md
examples/: drone.rs  example.rs  lowpass.rs  noise.rs  quantizer.rs  sequencer.rs
src/: branch.rs  comparators.rs  delay.rs  detect.rs  envelope.rs  filter.rs  lib.rs  math.rs  scales.rs  sinks.rs  sources.rs
