[package]
name = "opsynth"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.14"
hound = "3.5"
ordered-float = "3.3"
rand = "0.8"
rtrb = "0.2"

[dev-dependencies]
cpal = "0.14"

[[example]]
name = "drone"
crate-type = ["bin"]

[[example]]
name = "lowpass"
crate-type = ["bin"]

[[example]]
name = "noise"
crate-type = ["bin"]

[[example]]
name = "quantizer"
crate-type = ["bin"]

[[example]]
name = "sequencer"
crate-type = ["bin"]
